# CardGameEngine

./: setup.py
cgePy/: README.md  __init__.py  card_AI.py  card_game.py  card_manager.py  card_stats.py  pyproject.toml
cgePy/src/cgePy/: __init__.py  card_AI.py  card_game.py  card_manager.py
cgePy/tests/: tests.py
ui4cgePy/: LICENSE  README.md  pyproject.toml
ui4cgePy/src/ui4cgePy/: GameWindowTK.py  __init__.py  card_display.py  formTk.py  unit_tests_recorder.py
ui4cgePy/tests/: CRD_cards.csv  CRD_cards_dict.csv  DISP.ccfg  DISP.icfg  game_params.json  general_params.json  tests.py
uti/: interface_designer_cards.py  interface_designer_ui.py
