[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ui4cgePy"
version = "0.0.2"
description = "Card game engine for python"
authors = [
    {name = "CyrSol", email = "cyrille.soliman@gmail.com"},
]
requires-python = ">=3.8,<4"
dependencies = [
    "pygame"
]
